--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,6 +37,7 @@ paths:
             responses:
                 '200':
                     description: The job was posted successfully.
+            summary: Enter a job to the list
     /apply:
         put:
             requestBody:
@@ -68,10 +69,11 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/employerregister'
-                required: false
+                required: true
             responses:
                 '200':
                     description: Employer has been registered.
+            summary: Registering as an employer
     /register/freelancer:
         post:
             requestBody:
@@ -80,10 +82,11 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/freelancerregister'
-                required: false
+                required: true
             responses:
                 '200':
                     description: Freelancer has been registered.
+            summary: Registering as a freelancer
     /select-application:
         post:
             requestBody:
@@ -123,18 +126,24 @@ components:
             description: A job the employer is trying to find a freelancer to complete.
             type: object
             properties:
-                title:
+                id:
+                    type: integer
+                employerid:
+                    $ref: '#/components/schemas/employer'
+                name:
                     type: string
                 skills:
                     type: string
-                jobdescription:
+                description:
                     type: string
                 payrate:
                     type: string
             example:
-                title: string
+                id: integer
+                employerid: employer
+                name: string
                 skills: string
-                jobdescription: string
+                description: string
                 payrate: double
         portfolio:
             title: Root Type for portfolio
@@ -149,11 +158,14 @@ components:
                     type: string
                 skills:
                     type: string
+                college:
+                    type: string
             example:
                 id: integer
                 name: string
                 email: string
                 skills: string
+                college: string
         application:
             title: Root Type for application
             description: ''
@@ -172,46 +184,74 @@ components:
         employerregister:
             title: Root Type for employerregister
             description: ''
+            required:
+                - companyname
+                - email
             type: object
-            allOf:
-                -
-                    required:
-                        - companyname
-                        - email
-                    type: object
-                    properties:
-                        email:
-                            type: string
-                        companyname:
-                            type: string
-                -
-                    $ref: '#/components/schemas/usernameandpassword'
+            properties:
+                name:
+                    type: string
+                email:
+                    type: string
+                username:
+                    type: string
+                password:
+                    type: string
             example:
+                name: string
                 email: string
-                companyname: string
+                username: string
+                password: string
         freelancerregister:
             title: Root Type for freelancerregister
             description: ''
+            required:
+                - email
+                - name
             type: object
-            allOf:
-                -
-                    required:
-                        - email
-                        - name
-                    type: object
-                    properties:
-                        email:
-                            type: string
-                        name:
-                            type: string
-                        skill:
-                            type: string
-                -
-                    $ref: '#/components/schemas/usernameandpassword'
+            properties:
+                name:
+                    type: string
+                about:
+                    type: string
+                experiencelevel:
+                    type: string
+                email:
+                    type: string
+                username:
+                    type: string
+                password:
+                    type: string
+            example: |-
+                {
+                    "name": "string",
+                    "about": "string"
+                    "experiencelevel": "string",
+                    "email": "string",
+                    "username":"string",
+                    "password": "string"
+                }
+        employer:
+            title: Root Type for employer
+            description: ''
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                email:
+                    type: string
+                username:
+                    type: string
+                password:
+                    type: string
             example:
-                email: string
+                id: integer
                 name: string
-                skill: string
+                email: string
+                username: string
+                password: string
     securitySchemes:
         revwork_security_schema:
             scheme: bearer
