--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,13 @@ paths:
                 required: true
             responses:
                 '200':
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                            examples:
+                                Login Token Example:
+                                    value: xxx.yyyy.zzzz
                     description: The login was a sucess.
     /job:
         get:
@@ -138,13 +145,21 @@ components:
                     type: string
                 payrate:
                     type: string
-            example:
-                id: integer
-                employerid: employer
-                name: string
-                skills: string
-                description: string
-                payrate: double
+                istaken:
+                    description: |-
+                        True if a job has a freelancer
+                        False if a job is stil available
+                    type: boolean
+            example: |-
+                {
+                    "id": "integer",
+                    "employerid": "employer",
+                    "name": "string",
+                    "skills": "string",
+                    "description": "string",
+                    "payrate": "double"
+                    "istaken" : boolean
+                }
         application:
             title: Root Type for application
             description: ''
@@ -216,7 +231,7 @@ components:
             type: object
             properties:
                 id:
-                    type: integer
+                    type: string
                 name:
                     type: string
                 email:
