--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
