--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 application.properties
 /src/main/java/p2/revature/revworkboot
-target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -11,3 +10,4 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+/target/
